# hobheap

.github/workflows/: clean-pr.yml
clients/web/: index.html  package-lock.json  package.json
clients/web/src/: App.tsx
server/: .env  .gitignore  README.md  main.py  pyproject.toml
server/data/: README.md
server/experiments/: README.md  experiment_pinecone.ipynb  experiments_gpt_oss.ipynb
server/src/features/auth/: routes.py
